<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#161719">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/controlsContainer"
            android:background="@drawable/main_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/title_background">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:paddingStart="10dp"
                    android:text="@string/prompt_login"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/loadingCube"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/containerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/controlsContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="6dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/newsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/news" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/doubleSlash" />

            <TextView
                android:id="@+id/messagesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/messages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/doubleSlash" />

            <TextView
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/profileModel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/doubleSlash" />

            <TextView
                android:id="@+id/notesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/doubleSlash" />

            <TextView
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/map" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/timeContainer"
            android:background="@drawable/additional_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/additional_title_background">

                <TextView
                    android:id="@+id/rightTitleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:text="@string/prompt_login"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/rightContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical" />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/timeContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/additional_bottom_background"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:textSize="20sp" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
